force-app/main/default/objects/VerdeAmancoRequestItem__c/VerdeAmancoRequestItem__c.object-meta.xml
<CustomObject>
    <description>[###][VerdeAmancoRequestItem__c]</description>
    <label>Item da Solicitação Verde Amanco</label>
    <nameField>
        <label>Nome de Item da Solicitação Verde Amanco</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens da Solicitação Verde Amanco</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>