force-app/main/default/objects/VerdeAmancoRequestItem__c/fields/AmountNmb__c.field-meta.xml
<CustomField>
    <fullName>AmountNmb__c</fullName>
    <label>Quantidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>