force-app/main/default/objects/VerdeAmancoRequestItem__c/fields/KitItemIdFml__c.field-meta.xml
<CustomField>
    <fullName>KitItemIdFml__c</fullName>
    <formula>VerdeAmancoKitItemLkp__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID do Item do Kit</label>
    <type>Text</type>
</CustomField>