force-app/main/default/objects/VerdeAmancoRequestItem__c/fields/KitItemMundialCodeFml__c.field-meta.xml
<CustomField>
    <fullName>KitItemMundialCodeFml__c</fullName>
    <formula>VerdeAmancoKitItemLkp__r.SAPCodeTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Mundial do Item do Kit</label>
    <type>Text</type>
</CustomField>