force-app/main/default/objects/VerdeAmancoRequestItem__c/fields/KitItemNameTxt__c.field-meta.xml
<CustomField>
    <fullName>KitItemNameTxt__c</fullName>
    <label>Nome do Item do Kit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>