force-app/main/default/objects/VerdeAmancoRequestItem__c/fields/VerdeAmancoKitItemLkp__c.field-meta.xml
<CustomField>
    <fullName>VerdeAmancoKitItemLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item do Kit Verde Amanco</label>
    <referenceTo>VerdeAmancoKitItem__c</referenceTo>
    <relationshipLabel>Itens da Solicitação Verde Amanco</relationshipLabel>
    <relationshipName>VerdeAmancoSolicitationItems</relationshipName>
    <type>Lookup</type>
</CustomField>