force-app/main/default/objects/VerdeAmancoRequestItem__c/fields/VerdeAmancoSolicitationIdLkp__c.field-meta.xml
<CustomField>
    <fullName>VerdeAmancoSolicitationIdLkp__c</fullName>
    <label>Id Solicitação Verde Amanco</label>
    <referenceTo>VerdeAmancoSolicitation__c</referenceTo>
    <relationshipLabel>Itens da Solicitação Verde Amanco</relationshipLabel>
    <relationshipName>VerdeAmancoSolicitationItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>