force-app/main/default/objects/VerdeAmancoRequestItem__c/validationRules/MaximumAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>MaximumAmount</fullName>
    <active>true</active>
    <errorConditionFormula>AmountNmb__c  &gt;  VerdeAmancoKitItemLkp__r.MaximumAmountNmb__c</errorConditionFormula>
    <errorMessage>A quantidade selecionada é maior que a permitida.</errorMessage>
</ValidationRule>