force-app/main/default/objects/VerdeAmancoRequestItem__c/validationRules/MinimumQuantity.validationRule-meta.xml
<ValidationRule>
    <fullName>MinimumQuantity</fullName>
    <active>true</active>
    <errorConditionFormula>AmountNmb__c  &lt;= 0</errorConditionFormula>
    <errorMessage>A quantidade de um item selecionado deve ser maior que zero.</errorMessage>
</ValidationRule>