force-app/main/default/objects/VerdeAmancoRequestItem__c/validationRules/SolicitationBlocked.validationRule-meta.xml
<ValidationRule>
    <fullName>SolicitationBlocked</fullName>
    <active>true</active>
    <description>Não permite adicionar itens à solicitação caso o status da mesma seja diferente de &quot;Em preenchimento&quot;.</description>
    <errorConditionFormula>NOT(
ISPICKVAL(VerdeAmancoSolicitationIdLkp__r.StatusTxt__c , &quot;Em preenchimento&quot;)
)</errorConditionFormula>
    <errorMessage>Não é possível adicionar itens à essa solicitação.</errorMessage>
</ValidationRule>